<resources>
    <string name="app_name">Поиск Фильмов</string>

    <string name="main_menu_button_wounded">Избранное</string>
    <string name="main_menu_button_watch_later">Смотреть позже</string>
    <string name="main_menu_button_selection">Подборки</string>
    <string name="main_menu_link_posters">Постеры предоставлены: https://akspic.ru/</string>
    <string name="alert_double_tap_exit">Tap double for exit app</string>
    <string name="main_menu_button_home">Домой</string>
    <string name="details_share_to">Поделиться</string>
    <string name="main_menu_button_settings">Настройки</string>

    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">Сохранено в галерею</string>
    <string name="open">В галерею</string>
    <string name="search_query_is_short">Запрос должен быть не менее 3ех символов</string>
    <string name="error_search_query">Ошибка про поиске</string>
    <string name="remember_watch">Не забудь посмотреть!</string>
    <string name="info_pro_version">Доступно в Pro версии</string>
    <string name="label_watch_film">Посмотрите фильм:</string>
    <string name="label_look">Смотреть</string>

</resources>