<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/icon_home"
        android:title="@string/main_menu_button_home"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/icon_favorite"
        android:title="@string/main_menu_button_wounded"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/icon_watch_later"
        android:title="@string/main_menu_button_watch_later"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/icon_library"
        android:title="@string/main_menu_button_selection"
        app:showAsAction="withText"/>
</menu>